# LandmarkDiff-public

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile.gpu  MODEL_ZOO.md  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  init-wiki.yml  paper.yml  publish.yml  release.yml  stale.yml  wiki.yml
benchmarks/: benchmark_training.py
demos/: README.md
docs/: README.md  ROADMAP.md  docker-gpu.md  faq.md  index.md  install.md  social_media_drafts.md
docs/api/: clinical.md  conditioning.md  inference.md  landmarks.md  manipulation.md
docs/tutorials/: custom_procedures.md  deployment.md  evaluation.md  quickstart.md  training.md
docs/wiki/: Benchmarks.md  Clinical-Flags.md  FAQ.md  Home.md  Installation.md  Procedures.md  Quick-Start.md  Troubleshooting.md  _Sidebar.md
examples/: basic_inference.py  batch_inference.py  compare_procedures.py  custom_procedure.py  landmark_visualization.py  quickstart.ipynb  tps_only.py
landmarkdiff/: __init__.py  __main__.py  api_client.py  arcface_torch.py  cli.py  config.py  data_version.py  ensemble.py  evaluation.py  experiment_tracker.py  face_verifier.py  fid.py  hyperparam.py  log.py  losses.py  manipulation.py  metrics_viz.py  postprocess.py
landmarkdiff/synthetic/: pair_generator.py  tps_warp.py
notebooks/: quickstart.ipynb
scripts/: ablation_study.py  analyze_failures.py  analyze_training_data.py  api_server.py  batch_inference.py  benchmark_inference.py  benchmark_quality.py  build_training_dataset.py  bump_version.py  check_environment.py  ci_check.py  clean_data.py  clinical_demo.py  compare_methods.py  compare_models.py  compare_outputs.py  compute_baselines.py  compute_baselines_hda.py  compute_fid.py  create_test_split.py  cross_procedure_eval.py  dataset_stats.py  demo.py  distill_lcm.py  ensemble_inference.py  evaluate_checkpoint.py  evaluate_quality.py  export_model.py  export_results.py  fast_split.py  gallery.py  generate_demos.py  generate_figures.py  generate_html_report.py  generate_metadata.py  generate_pairs_scaled.py  generate_paper_figures.py  generate_paper_tables.py  generate_qualitative_figure.py  generate_realistic_pairs.py  (+42 more)
scripts/ablation/: submit_all.sh
scripts/hf_space/: README.md  app.py
tests/: conftest.py  test_ablation_metadata.py  test_arcface_torch.py  test_audit.py  test_benchmarks.py  test_cli_extended.py  test_config.py  test_config_validation.py  test_curriculum_benchmark.py  test_data_version.py  test_deep_dive.py  test_evaluation_extended.py  test_exhaustive.py  test_hyperparam.py  test_integration.py  test_landmarks_extended.py  test_manipulation_extended.py  test_pair_generator.py  test_pipeline_integration.py  test_pipeline_tools.py  test_postprocess.py  test_training_integration.py
