[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landmarkdiff"
version = "0.1.0"
description = "Anatomically-conditioned latent diffusion for facial surgery outcome prediction from standard clinical photography"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "dreamlessx", email = "dreamlessx@users.noreply.github.com"}]

dependencies = [
    "torch>=2.1.0",
    "diffusers>=0.27.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.0",
    "mediapipe>=0.10.9",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
train = [
    "wandb>=0.16.0",
    "webdataset>=0.2.0",
    "deepspeed>=0.13.0",
    "lpips>=0.1.4",
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.17.0",
]
eval = [
    "torch-fidelity>=0.3.0",
    "lpips>=0.1.4",
    "scikit-image>=0.22.0",
]
app = [
    "gradio>=4.15.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
]

[project.scripts]
landmarkdiff = "landmarkdiff.__main__:main"

[tool.setuptools.packages.find]
include = ["landmarkdiff*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["N812"]

[tool.ruff.lint.per-file-ignores]
"landmarkdiff/arcface_torch.py" = ["N806", "N802", "E741"]
"landmarkdiff/augmentation.py" = ["N806", "N803"]
"landmarkdiff/audit.py" = ["E501"]
"landmarkdiff/evaluation.py" = ["N806"]
"landmarkdiff/landmarks.py" = ["N806"]
"landmarkdiff/losses.py" = ["N806", "E741"]
"landmarkdiff/synthetic/tps_warp.py" = ["N806"]
"landmarkdiff/synthetic/augmentation.py" = ["N806"]
"scripts/analyze_training_run.py" = ["E501"]
"scripts/train_controlnet.py" = ["N806", "E402"]
"scripts/training_dashboard.py" = ["E501"]
"scripts/dry_run_training.py" = ["N806", "E402", "F401"]
"scripts/augment_pairs.py" = ["N806"]
"scripts/benchmark_quality.py" = ["E501"]
"scripts/check_environment.py" = ["E501"]
"scripts/clean_data.py" = ["E402", "E501"]
"scripts/compare_outputs.py" = ["E402"]
"scripts/evaluate_on_hda.py" = ["E402"]
"scripts/monitor_training.py" = ["E501", "B007"]
"scripts/plot_training_curves.py" = ["E402", "E501"]
"scripts/process_hda_database.py" = ["E402"]
"scripts/run_evaluation.py" = ["E402"]
"scripts/validate_config.py" = ["E402", "SIM102"]
"tests/test_exhaustive.py" = ["N806"]
"tests/test_deep_dive.py" = ["N806", "B017"]
"tests/test_augmentation.py" = ["N806"]
"tests/test_config_augmentation.py" = ["N806", "N802"]
"tests/test_training_integration.py" = ["N806", "E501"]
"tests/test_pipeline_tools.py" = ["E501"]
"tests/test_process_hda.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "landmarkdiff.hyperparam",
    "landmarkdiff.inference",
    "landmarkdiff.ensemble",
    "landmarkdiff.losses",
    "landmarkdiff.arcface_torch",
    "landmarkdiff.displacement_model",
    "landmarkdiff.checkpoint_manager",
    "landmarkdiff.face_verifier",
    "landmarkdiff.metrics_viz",
    "landmarkdiff.data",
    "landmarkdiff.synthetic.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
